--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>墨狼云 - Minecraft服务器</title>
+    <link rel="icon" type="image/png" href="favicon.jpg">
     <style>
         /* 基础样式重置 */
         * {
