--- a/index.html
+++ b/index.html
@@ -674,19 +674,19 @@
                                 <svg class="icon" viewBox="0 0 24 24" style="color:#3498db;width:24px;height:24px;">
                                     <path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20M13,13V18H10V13H13Z" />
                                 </svg>
-                                <span>文件大小: ???GB</span>
+                                <span>模组文件大小: 97.3MB</span>
                             </div>
                             <div class="info-card">
                                 <svg class="icon" viewBox="0 0 24 24" style="color:#3498db;width:24px;height:24px;">
                                     <path d="M21,16.5C21,16.88 20.79,17.21 20.47,17.38L12.57,21.82C12.41,21.94 12.21,22 12,22C11.79,22 11.59,21.94 11.43,21.82L3.53,17.38C3.21,17.21 3,16.88 3,16.5V7.5C3,7.12 3.21,6.79 3.53,6.62L11.43,2.18C11.59,2.06 11.79,2 12,2C12.21,2 12.41,2.06 12.57,2.18L20.47,6.62C20.79,6.79 21,7.12 21,7.5V16.5M12,4.15L5,8.09V15.91L12,19.85L19,15.91V8.09L12,4.15M14.93,8.27L16.36,9.7L10.58,15.5L7.64,12.56L9.07,11.13L10.58,12.64L14.93,8.27Z" />
                                 </svg>
-                                <span>模组数量: ???个</span>
+                                <span>模组数量: 49个</span>
                             </div>
                             <div class="info-card">
                                 <svg class="icon" viewBox="0 0 24 24" style="color:#3498db;width:24px;height:24px;">
                                     <path d="M17.65,6.35C16.2,4.9 14.21,4 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20C15.73,20 18.84,17.45 19.73,14H17.65C16.83,16.33 14.61,18 12,18A6,6 0 0,1 6,12A6,6 0 0,1 12,6C13.66,6 15.14,6.69 16.22,7.78L13,11H20V4L17.65,6.35Z" />
                                 </svg>
-                                <span>最后更新: 2025-6-11</span>
+                                <span>最后更新: 2025-6-12</span>
                             </div>
                         </div>
                         
@@ -773,6 +773,13 @@
                     <p>了解服务器最新动态、更新内容和活动通知</p>
                 </div>
                 <div class="timeline">
+		     <div class="timeline-item">
+                        <div class="timeline-date">2025.6.11</div>
+                        <div class="timeline-content">
+          	             <h3>官网建立（服务器暂未开放）</h3>
+                             <p>敬请期待</p>
+                        </div>
+                    </div>
                     <div class="timeline-item">
                         <div class="timeline-date">2025.6.11</div>
                         <div class="timeline-content">
