--- a/index.html
+++ b/index.html
@@ -776,8 +776,8 @@
 		     <div class="timeline-item">
                         <div class="timeline-date">2025.6.11</div>
                         <div class="timeline-content">
-          	             <h3>官网建立（服务器暂未开放）</h3>
-                             <p>敬请期待</p>
+          	             <h3>整合包v1.0.0上线</h3>
+                             <p>测试版本，可能出现模组冲突</p>
                         </div>
                     </div>
                     <div class="timeline-item">
