--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                         
-                        <a href="http://mowolf.cn:5244/d/mcl/139mc/%E5%A2%A8%E7%8B%BC%E4%BA%91%5B%E6%9A%AE%E8%89%B2%E6%A3%AE%E6%9E%97%E6%95%B4%E5%90%88%E5%8C%85%5D-1.21.1.mrpack?sign=0Co-8t3PtKTuX0r4iQkzJTVL--UPmW0Ua4WBWHLf2m4=:0" class="download-btn">
+                        <a href="http://mc.mowolf.cn/%E5%A2%A8%E7%8B%BC%E4%BA%91%5B%E6%9A%AE%E8%89%B2%E6%A3%AE%E6%9E%97%E6%95%B4%E5%90%88%E5%8C%85%5D-1.21.1.mrpack" class="download-btn">
                             <i class="fas fa-download"></i>
                             下载整合包
                         </a>
