--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         /* 整合包图片特定样式 */
         .pack-image {
             height: 280px;
-            background-image: url('image.jpg');
+            background-image: url('/mowolf233/mc.mowolf.cn/edit/main/image.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -222,7 +222,7 @@
         <footer>
             <div class="footer-content">
                 <p>墨狼云 Minecraft 服务器 - 打造最友好的游戏社区</p>
-                <p class="copyright">© 2023 墨狼云 Minecraft 服务器 版权所有</p>
+                <p class="copyright">© 2024-2025 墨狼云 版权所有</p>
             </div>
         </footer>
     </div>
