--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         /* 整合包图片特定样式 */
         .pack-image {
             height: 280px;
-            background-image: url('/mowolf233/mc.mowolf.cn/edit/main/image.jpg');
+            background-image: url('image.jpg');
             background-size: cover;
             background-position: center;
             display: flex;
